added more styling to navbar module and created second project

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rufina&family=Antic+Didone');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Playfair+Display+SC:wght@700&family=Abel&family=Barlow+Semi+Condensed');
 
 html {
   font-family: sans-serif;
