--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -6,7 +6,7 @@
 .header-text {
     margin: 0 auto;
     max-width: 960;
-    padding: 2.5rem 1.0875rem;
+    padding: 2.3rem 1.0875rem;
 }
 .title {
     margin: 0;
@@ -24,6 +24,7 @@
     color: gray;
     font-weight: 600;
     font-family: 'Abel', sans-serif;
+    font-size: 20px;
 }
 .description span {
     color: rgb(163, 19, 163);
@@ -33,9 +34,15 @@
     .title a{
         font-size: 70px;
     }
+    .description {
+        font-size: 18px;
+    }
 }
 @media only screen and (max-width: 360px) {
     .title a{
         font-size: 62px;
+    }
+    .description {
+        font-size: 17px;
     }
 }
