--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -11,7 +11,7 @@
     justify-content: space-evenly;
 }
 .nav-item {
-    color: rgb(141, 140, 140);
+    color: rgb(167, 161, 161);
     text-shadow: gray 1px 1px;
     margin-bottom: -.95rem;
     margin-top: .4rem;
@@ -20,7 +20,7 @@
 }
 .nav-item:hover {
     text-decoration: none;
-    color: purple
+    color: rgb(224, 73, 161)
 }
 .active-link {
     color: gray;
