--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background: linear-gradient(0deg, rgba(248,249,251,0) 0%, rgba(110, 75, 96, 0.815) 95%);
+    background: linear-gradient(0deg, rgba(248,249,251,0) 0%, rgba(124, 84, 108, 0.815) 95%);
     text-align: center;
 }
 .header-text {
@@ -18,12 +18,14 @@
     font-size: 100px;
     letter-spacing: 1px;
     font-family: 'Playfair Display SC', serif;
+    font-stretch: expanded;
 }
 .description {
-    color: rgb(190, 176, 176);
+    color: rgb(224, 213, 213);
     font-weight: 600;
     font-family: 'Abel', sans-serif;
     font-size: 20px;
+    mix-blend-mode: difference;
 }
 .description span {
     color: rgb(224, 73, 161);
