improved styling and changed main background image

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,5 +1,6 @@
 .header {
-    background: linear-gradient(0deg, rgba(248,249,251,0) 0%, rgba(124, 84, 108, 0.815) 95%);
+    /* background: linear-gradient(0deg, rgba(248,249,251,0) 0%, rgba(124, 84, 108, 0.815) 95%); */
+    background: linear-gradient(0deg, rgba(248,249,251,0) 0%, rgba(184, 124, 160, 0.815) 95%);
     text-align: center;
 }
 .header-text {
